--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mongoose": "^5.3.14",
+    "mysql-json": "^0.1.3",
     "mysqldump": "^2.2.1",
     "parse-database-url": "^0.3.0",
     "run-async-gen": "^1.2.0",
